Added and edited NG experience and minor cleanup and adjustment to other experience sections

--- a/resume.tex
+++ b/resume.tex
@@ -71,13 +71,16 @@
             \hfill April 2020 - Present \\
             \textbf{Senior Principal Software Engineer}
             \begin{itemize}  \itemsep -2pt % reduce space between items
-              \item   Architected and developed DevSecOps solutions and guidance for
-                          large programs.
-              \item   Led outreach to development and administrative teams for \newline
-                          on-boarding to DevSecOps processes.
-              \item   Led automation effort of automating manual processes through
-                          scripting.
-              \item   Architected and developed solutions for an AWS environment.
+              \item   Architected and developed DevSecOps solutions, libraries,
+                          and guidance for multiple teams on large programs
+                          in AWS and on premises environments.
+              \item   Led outreach to various teams for on-boarding to DevSecOps \newline
+                          processes and pipelines to automate and increase team efficiency
+                          and performance.
+              \item   Led automation effort and process improvement by leveraging
+                          scripting and various tools for DevSecOps efforts.
+              \item   Mentored other DevSecOps engineers for career guidance and
+                          technical growth.
             \end{itemize}
 
 
@@ -99,10 +102,10 @@
                           administrators with an agile methodology for DevOps.
               \item   Led development of automated software testing and pipelines \newline
                           for building software using Gitlab, Docker, Jenkins Pipeline, Chef,
-                          Nexus, Flyway, SonarQube, Selenium, and VSphere.
-              \item  Led Puppet development responsible for installation and \newline
-                          configuration of applications.
-              \item  Reviewed code from multiple developers and outlined code quality \newline
+                          Nexus, Flyway, SonarQube, Selenium, Puppet, and VSphere.
+              \item   Led DevSecOps development responsible for installation and \newline
+                          configuration in a secure environment.
+              \item   Reviewed code from multiple developers and outlined code quality \newline
                           standards and guidelines for code review.
               \item   Architected information security solutions to meet DoD \newline
                           compliance (TLS, SSL, FIPS approved ciphers, certificates).
@@ -121,15 +124,15 @@
             \newline
             \textbf{Senior Software Engineer}
             \begin{itemize}  \itemsep -2pt % reduce space between items
+              \item   Provided in person field support for customers.
               \item   Developed production application code using Java, React, SQL, \newline
-                          HTML, Ext JS, Powershell, NSIS, and Ruby.
+                          HTML, Ext JS, Powershell, NSIS, Puppet, and Ruby.
               \item   Developed applications using Severless architecture on AWS.
               \item   Developed a chef project for automated deployment of project \newline
                           code, reducing time required for pushes to production to under 10 min.
               \item   Developed non-destructive install capability to retain data across\newline
                           versions (using Flyway, Windows Powershell, and Postgres).
-              \item   Wrote Cucumber, Selenium, and testng test scripts for automated \newline
-                          regression testing.
+              \item   Developed test scripts using Cucumber, Selenium, and testng.
             \end{itemize}
 
             % TODO - Note: Remove Accenture and Oracle experience description for more space.
@@ -161,10 +164,10 @@
             \hfill            February 2011 - March 2014 \\
             \textbf{Software Consultant}
             \begin{itemize}  \itemsep -2pt %reduce space between items
-              \item Developed a continuous testing system using Selenium
+              \item   Developed a continuous testing system using Selenium
                           and a continuous integration server (Hudson) for testing web code designed
                           for a highly available point of sale system. (NetApp)
-              \item Presented training sessions on latest web application testing \newline
+              \item   Presented training sessions on latest web application testing \newline
                           and development techniques.
             \end{itemize}
 
