Rewrote Synopsis section replace software skills with general description.

--- a/resume.tex
+++ b/resume.tex
@@ -49,14 +49,13 @@
         \section{SYNOPSIS}
             {\sl Clearance :} Secret
 
-            {\sl Software:}
+            {\sl Description:}
               \hangindent=2em
               \hangafter=1
-              AWS, Azure, Docker, Node.js, React, Angular, Spring,\newline
-              PostgreSQL, Hibernate, Gitlab, Jenkins Pipeline, Chef, Puppet,\newline
-              Selenium, Nexus, SonarQube, Selenium, Tomcat, Apache, Kafka,\newline
-              Linux, Windows, Microservices, Powershell, GIT, Agile, Scrum,\newline
-              Jira, Confluence\newline
+              Experienced software professional and leader with a proven
+              track record of leveraging industry knowledge to implement \newline
+              successful solutions and organizational skills to drive and deliver
+              value.
 
         \section{EXPERIENCE}
             %   NG Experience
