NG and Peraton experience section expanded and trimmed spacing and content from past experiences on 2nd page.

--- a/resume.tex
+++ b/resume.tex
@@ -57,10 +57,10 @@
               Experienced software professional and leader with a proven
               track record of leveraging industry knowledge to implement \newline
               successful solutions and organizational skills to drive and deliver
-              value.
+              value for government and commercial customers.
 
         \section{EXPERIENCE}         
-            %   NG Experience
+            %   NG/Peraton Experience
             %   image trimming is for cropping the image; order of numbers defined as [left, bottom, right, top]
             %   slanted text boxes left for potential future use and can see the section headers clearly
             {\sl
@@ -80,18 +80,33 @@
             \textbf{Senior Principal Software Engineer}
             \begin{itemize}  \itemsep -2pt % reduce space between items
               \item   Architected and developed DevSecOps solutions, libraries,
-                          and guidance for multiple teams on large programs
-                          in AWS and on premises environments.
-              \item   Led outreach to various teams for on-boarding to DevSecOps \newline
-                          processes and pipelines to automate and increase team efficiency
-                          and performance.
-              \item   Led automation effort and process improvement by leveraging
-                          scripting and various tools for DevSecOps efforts.
+                          pipelines and standardization guidance for multiple teams on large \newline
+                          programs using Jenkins shared libraries and CSP services.
+              \item   Architected a custom Salesforce Jenkins pipeline for management of 
+                          promotion through software lifecycle within a single Salesforce org.
+              \item   Led modernization and implementation for teams to integrate   
+                          with DevSecOps processes and pipelines to automate and increase  
+                          efficiency and throughput for legacy applications.
+              \item   Designed and Implemented Ansible playbooks for managing legacy
+                          applications and integrated execution into Jenkins CICD Pipeline.
+              \item   Implemented program wide standards and processes for common 
+                          development practices such as code review, code quality, and \newline
+                          security waivers.
+              \item   Led process design and implementation for management of the 
+                          software lifecycle of a critical upgrade to a high demand \newline
+                          application.
+              \item   Implemented object-oriented design patterns to provide re-usable solutions
+                          and mentored others in the use of re-using object-oriented code.
+              \item   Designed and implemented Puppet desired state configuration \newline 
+                          libraries to define roles for legacy system upgrades.
+              \item   Led program standardization and simplification of development team 
+                          demands using DevSecOps pipeline to canonicalize standard common
+                          configuration through tools like npm, maven, and gradle.
               \item   Mentored other DevSecOps engineers for career guidance and
-                          technical growth.
+                          technical growth by teaching data structures and algorithms.
             \end{itemize}
 
-
+           \pagebreak
             %   SAIC Experience
             %   image trimming is for cropping the image; order of numbers defined as [left, bottom, right, top]
             %   slanted text boxes left for potential future use and can see the section headers clearly
@@ -103,41 +118,32 @@
             }
             \hfill January 2015 - April 2020 \\
             \textbf{DevOps/Software Lead}
-            \begin{itemize}  \itemsep -2pt % reduce space between items
-              \item   Provided technical approaches and guidance for architecture \newline
-                          and security to a team of engineers.
-              \item   Maintained a backlog and led a team of engineers and \newline
-                          administrators with an agile methodology for DevOps.
+            \begin{itemize}  [nolistsep, noitemsep, topsep=0px, parsep=0px, partopsep=0px] % reduce space between items
+              \item   Provided technical guidance and leadership for architecture \newline
+                          and security to an agile team of engineers for DevSecOps.
+              \item   Architected information security solutions to meet DoD \newline
+                          compliance (TLS, SSL, FIPS, SeLinux, certificates) using Puppet.
               \item   Led development of automated software testing and pipelines \newline
                           for building software using Gitlab, Docker, Jenkins Pipeline, Chef,
                           Nexus, Flyway, SonarQube, Selenium, Puppet, and VSphere.
-              \item   Led DevSecOps development responsible for installation and \newline
-                          configuration in a secure environment.
-              \item   Reviewed code from multiple developers and outlined code quality \newline
-                          standards and guidelines for code review.
-              \item   Architected information security solutions to meet DoD \newline
-                          compliance (TLS, SSL, FIPS approved ciphers, certificates).
             \end{itemize}
-
-            \pagebreak
-
+            \vspace{-5mm} %Trim space between itemization blocks
             % SAIC logo included due to page break
-            {\sl
-              \includegraphics[
-                  scale=0.015,
-                  trim=110 200 110 120
-                ]{resume_images/SAIC_logo_RGB-lg.jpg}
-            }
-          % \hfill January 2015 - April 2020 \\
-            \newline
+            %{\sl
+            %  \includegraphics[
+            %      scale=0.015,
+            %      trim=110 200 110 120
+            %    ]{resume_images/SAIC_logo_RGB-lg.jpg}
+            %}
+            % \hfill January 2015 - April 2020 \\
+            %\newline
             \textbf{Senior Software Engineer}
-            \begin{itemize}  \itemsep -2pt % reduce space between items
-              \item   Provided in person field support for customers.
-              \item   Developed production application code using Java, React, SQL, \newline
-                          HTML, Ext JS, Powershell, NSIS, Puppet, and Ruby.
+            \begin{itemize}  [nolistsep, noitemsep, topsep=0px, parsep=0px, partopsep=0px] % reduce space between items
+              \item   Developed production application code using Java, Angular, \newline 
+                          React, SQL, HTML, Ext JS, Powershell, NSIS, Puppet, and Ruby.
               \item   Developed applications using Severless architecture on AWS.
               \item   Developed a chef project for automated deployment of project \newline
-                          code, reducing time required for pushes to production to under 10 min.
+                          code, reducing deploy time to under 10 min from hours.
               \item   Developed non-destructive install capability to retain data across\newline
                           versions (using Flyway, Windows Powershell, and Postgres).
               \item   Developed test scripts using Cucumber, Selenium, and testng.
@@ -151,22 +157,23 @@
             {\sl
               \includegraphics[
                   scale=0.1,
-                  trim=110 200 110 120
+                  trim=110 200 110 170
                 ]{resume_images/accenture-logo.jpg}
             }
             \hfill April 2014 - December 2014 \\
             \textbf{Software Developer Specialist}
             \begin{itemize}  \itemsep -2pt % reduce space between items
-              \item   Pioneered Jenkins using Chef Ruby scripts and Vagrant\newline
-                          to automatically install and configure a server running on a VM.
-              \item   Developed Flyway SQL scripts for updating and creating new
-                          records for supporting deployments.
+              \item   Developed a novel on-demand Jenkins using Chef Ruby scripts 
+                          and Vagrant to install and configure a build server on demand.
+              \item   Developed Flyway SQL scripts to automated database \newline
+                          deployments.
             \end{itemize}
 
             %  ORACLE Experience
             {\sl
               \includegraphics[
-                  scale=0.1
+                  scale=0.1,
+                  trim=0 0 0 200
                 ]{resume_images/663px-Oracle_logo.png}
             }
             \hfill            February 2011 - March 2014 \\
@@ -175,10 +182,8 @@
               \item   Developed a continuous testing system using Selenium
                           and a continuous integration server (Hudson) for testing web code designed
                           for a highly available point of sale system. (NetApp)
-              \item   Presented training sessions on latest web application testing \newline
-                          and development techniques.
             \end{itemize}
-
+       \vspace{-4mm} %Spacing
         \section{EDUCATION}
             \begin{multicols}{2} {
                 \makebox[2\columnwidth] {
@@ -208,7 +213,7 @@
                 }
             }
             \end{multicols}
-
+       \vspace{-5mm} %Spacing
         \section{CERTS}
             % DevOps Institute Cert
             \begin{multicols}{2} {
@@ -223,7 +228,7 @@
                     }
                 }
             }
-
+            
             {
                 \makebox[0.55\columnwidth] {
                     \parbox{1.0\textwidth} {
@@ -249,7 +254,7 @@
                     }
                 }
             }
-
+            \vspace{-5mm}  %Spacing
             {
                 \makebox[0.55\columnwidth] {
                     \parbox{1.0\textwidth} {
