Updated resume to Add OnyxPoint Experience and trim older experiences.

--- a/resume.tex
+++ b/resume.tex
@@ -72,6 +72,23 @@
               value for government and commercial customers for over \difftoday{2011}{02}{01} years.
 
         \section{EXPERIENCE}         
+        
+            {\sl
+              \includegraphics[
+                  scale=0.035,
+                  trim=110 200 110 120
+                ]{resume_images/OnyxPoint_logo_orig.png}
+            }
+            \hfill August 2023 - Present \\
+            \textbf{Software Engineer}
+            \begin{itemize}  [nolistsep, noitemsep, topsep=0px, parsep=0px, partopsep=0px] % reduce space between items
+              \item   Provided technical guidance and leadership for architecture \newline
+                          for security compliance automation.
+              \item   Architected software tooling to and upgrade path for a live \newline
+                          SaaS instance and standalone instances.
+              \item   Implemented Puppet for ensuring compliance \newline
+                          with various security standards (CIS, DISA, etc).
+            \end{itemize}
             %   NG/Peraton Experience
             %   image trimming is for cropping the image; order of numbers defined as [left, bottom, right, top]
             %   slanted text boxes left for potential future use and can see the section headers clearly
@@ -88,37 +105,31 @@
                   scale=0.115,
                   trim=10 10 25 25
                 ]{resume_images/Peraton-logo.jpeg}
-            \hfill April 2020 - Present \\
+            \hfill April 2020 - July 2023 \\
             \textbf{Senior Principal Software Engineer}
             \begin{itemize}  \itemsep -2pt % reduce space between items
-              \item   Architected and developed DevSecOps solutions, libraries,
+              \item   Architected and developed DevSecOps custom solutions, libraries,
                           pipelines and standardization guidance for multiple teams on large \newline
                           programs using Jenkins shared libraries and CSP services.
-              \item   Architected a custom Salesforce Jenkins pipeline for management of 
-                          promotion through software lifecycle within a single Salesforce org.
               \item   Led modernization and implementation for teams to integrate   
-                          with DevSecOps processes and pipelines to automate and increase  
-                          efficiency and throughput for legacy applications.
+                          with DevSecOps processes, pipelines, and practices to automate 
+                          and increase throughput for legacy Oracle SOA apps.
               \item   Designed and Implemented Ansible playbooks for managing legacy
                           applications and integrated execution into Jenkins CICD Pipeline.
               \item   Implemented program wide standards and processes for common 
-                          development practices such as code review, code quality, and \newline
-                          security waivers.
+                          development practices such as code review, code quality.
               \item   Led process design and implementation for management of the 
-                          software lifecycle of a critical upgrade to a high demand \newline
-                          application.
-              \item   Implemented object-oriented design patterns to provide re-usable solutions
-                          and mentored others in the use of re-using object-oriented code.
-              \item   Designed and implemented Puppet desired state configuration \newline 
-                          libraries to define roles for legacy system upgrades.
-              \item   Led program standardization and simplification of development team 
-                          demands using DevSecOps pipeline to canonicalize standard common
-                          configuration through tools like npm, maven, and gradle.
-              \item   Mentored other DevSecOps engineers for career guidance and
-                          technical growth by teaching data structures and algorithms.
+                          software lifecycle of a critical upgrade to a high demand app.
+              \item   Mentored multiple team members on object-oriented design \newline 
+                          patterns in code reviews and to provide re-usable solutions.
+              \item   Designed, implemented, and led Puppet desired state \newline
+                          configuration libraries to define roles for legacy system upgrades.
+              \item   Architected program-wide standardization and simplification of  
+                          development team demands using DevSecOps pipelines to \newline
+                          canonicalize standard common configuration through tools like npm, maven, and gradle.
             \end{itemize}
 
-           \pagebreak
+           % \pagebreak
             %   SAIC Experience
             %   image trimming is for cropping the image; order of numbers defined as [left, bottom, right, top]
             %   slanted text boxes left for potential future use and can see the section headers clearly
@@ -134,7 +145,7 @@
               \item   Provided technical guidance and leadership for architecture \newline
                           and security to an agile team of engineers for DevSecOps.
               \item   Architected information security solutions to meet DoD \newline
-                          compliance (TLS, SSL, FIPS, SeLinux, certificates) using Puppet.
+                          compliance (TLS, SSL, FIPS, SeLinux, PKI) using Puppet.
               \item   Led development of automated software testing and pipelines \newline
                           for building software using Gitlab, Docker, Jenkins Pipeline, Chef,
                           Nexus, Flyway, SonarQube, Selenium, Puppet, and VSphere.
@@ -158,7 +169,7 @@
                           code, reducing deploy time to under 10 min from hours.
               \item   Developed non-destructive install capability to retain data across\newline
                           versions (using Flyway, Windows Powershell, and Postgres).
-              \item   Developed test scripts using Cucumber, Selenium, and testng.
+              \item   Developed test scripts using Cucumber, Selenium, and Testng.
             \end{itemize}
 
             % TODO - Note: Remove Accenture and Oracle experience description for more space.
@@ -177,8 +188,7 @@
             \begin{itemize}  \itemsep -2pt % reduce space between items
               \item   Developed a novel on-demand Jenkins using Chef Ruby scripts 
                           and Vagrant to install and configure a build server on demand.
-              \item   Developed Flyway SQL scripts to automated database \newline
-                          deployments.
+              \item   Developed Flyway SQL automated database migrations.
             \end{itemize}
 
             %  ORACLE Experience
@@ -190,11 +200,11 @@
             }
             \hfill            February 2011 - March 2014 \\
             \textbf{Software Consultant}
-            \begin{itemize}  \itemsep -2pt %reduce space between items
-              \item   Developed a continuous testing system using Selenium
-                          and a continuous integration server (Hudson) for testing web code designed
-                          for a highly available point of sale system. (NetApp)
-            \end{itemize}
+       %     \begin{itemize}  \itemsep -2pt %reduce space between items
+       %        \item   Developed a continuous testing system using Selenium
+       %                   and a continuous integration server (Hudson) for testing web code designed
+       %                   for a highly available point of sale system. (NetApp)
+       %     \end{itemize}
        \vspace{-4mm} %Spacing
         \section{EDUCATION}
             \begin{multicols}{2} {
