--- a/resume.tex
+++ b/resume.tex
@@ -48,8 +48,8 @@
                 \setlength\topsep{0pt} % removes the extra spaces created by the center environment
                 \setlength\parskip{0pt}
                 \begin{center}
-                    6709 Applemint Lane  \\
-                    Alexandria, VA 22310 \\
+                    116 East St SE  \\
+                    Vienna, VA 22180 \\
                     \href{mailTo:mattsmason@gmail.com}{ mattsmason@gmail.com } \\
                     (410) 370-4778
                 \end{center}
